--- a/cokewebsite.html
+++ b/cokewebsite.html
@@ -26,7 +26,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar navbar-expand-lg navbar-light bg- ">
   <a class="navbar-brand" href="#">Browse</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -54,11 +54,6 @@
 
    </form>
  </div>
-
-
-
-
-
 
 
 
@@ -160,9 +155,6 @@
 
   </div>
 </div>
-
-
-
 
   
 </div>
