--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
 	<title>month3 projects</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/project3.css">
-<body style="background-image: url('mainbg2.jpeg');background-size: cover;">
+<body style="background-image: url('mainbg2.jpeg')">
 
 </head>
 <body>
@@ -15,13 +15,24 @@
 	
 </div>
 
-
+-
 
 <div class="push">
 
 <div class="container-fluid mainbg" >
+	
 
 	<div class="row first">
+
+
+	<button class="threeflex">
+		<div id="dot1"></div>
+		<div id="dot2"></div>
+		<div id="dot3"></div>
+		</button>
+
+
+
 		<div class="col-md-12  logo"><img src="images/ccbalogo.jpeg" style="width:250px; height:70px">  </div>
 		<div id="ccba">
 			CCBA Online Training Register and Course Evaluation
@@ -170,7 +181,8 @@
 
 
 				<button class="next">
-					<p>Next</p>
+					
+					<a href="file:///C:/Users/dborke/OneDrive%20-%20CCBAGROUP/Desktop/BOOTSTRAP-PRACTICS/project4.html"><p>Next</p></a>
 				</button>
 
 
